<?xml version="1.0"?>
<package format="2">
<name>tinyxml2_catkin</name>
<version>0.0.0</version>
<description>The tinyxml2_catkin package</description>
<maintainer email="tejaswi.digumarti@disneyresearch.com">Tejaswi Digumarti</maintainer>
<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>

</package>
